# Chandas

./: Cargo.toml  Readme.md  foo.json
demo/: app.py  requirements.txt  script.js  style.css
demo/static/: script.js
demo/templates/: index.html
demo/website/: index.html  script.js  style.css
src/: data.rs  format.rs  identify.rs  lib.rs  main.rs  process.rs  scheme.rs  utils.rs
