[package]
name = "Chandas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.102" }
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
levenshtein = "1.0.5"


[profile.release]
debug = 1
